--- a/erc.html
+++ b/erc.html
@@ -75,21 +75,21 @@ discrete-choice models are a workhorse tool in labor economics and industrial or
 <br><br> The performance of the tools will be assessed theoretically and via simulation, and
 they will be applied to various empirical problems.</p>
 
-<b> Research output </b>
+<b><u> Research output </u></b>
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/ET revision.pdf">Learning Markov processes with latent variables</a>. <i>Econometric Theory</i>, forthcoming.
+<a href="preprints/markov/ET revision.pdf">Learning Markov processes with latent variables</a>. <font color="310061">Econometric Theory</font>, forthcoming.
 </p> 
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <i>Econometrica</i> 92, 411-427.
+<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <font color="310061">Econometrica</font> 92, 411-427.
 </p> 
 
 <p> 	
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i> 237, 105462.
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <font color="310061">Journal of Econometrics</font> 237, 105462.
 </p> 
 	
 <p> 
@@ -99,7 +99,7 @@ A. Higgins and K. Jochmans.
 
 <p> 
 K. Jochmans
-<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i> 235, 1203-1214.
+<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <font color="310061">Journal of Econometrics</font> 235, 1203-1214.
 </p>
 
 <p> 
@@ -108,68 +108,68 @@ A. Higgins.
 </p> 
 
 <p>  
-K. Jochmans and M. Weidner. <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i> 40, 60-97.
+K. Jochmans and M. Weidner. <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <font color="310061">Econometric Theory</font> 40, 60-97.
 </p> 
 	
 <p> 
-K. Jochmans and V. Verardi. <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i> 37, 1121–1137.
+K. Jochmans and V. Verardi. <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <font color="310061">Journal of Applied Econometrics</font> 37, 1121–1137.
 </p> 
 	
 <p> 
-K. Jochmans. <a href="publications/many regressors/many regressors.pdf">Heteroskedasticity-robust inference in linear regression models with many covariates</a>. <i>Journal of the American Statistical Association</i> 117, 887–896.
+K. Jochmans. <a href="publications/many regressors/many regressors.pdf">Heteroskedasticity-robust inference in linear regression models with many covariates</a>. <font color="310061">Journal of the American Statistical Association</font> 117, 887–896.
 </p> 
 	
 <p> 	
-K. Jochmans. <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental-variable estimators of fixed-effect models for count data</a>. <i>Economics Letters</i> 212, 110318.
+K. Jochmans. <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental-variable estimators of fixed-effect models for count data</a>. <font color="310061">Economics Letters</font> 212, 110318.
 </p> 
 
 <p> 
 K. Jochmans. 
-<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <i>Journal of Applied Econometrics</i> 38, 321-333.
+<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <font color="310061">Journal of Applied Econometrics</font> 38, 321-333.
 </p> 
 		
 <p> 
-K. Jochmans. <a href="publications/portmanteau/serial correlation.pdf">A portmanteau test for correlation in short panels</a>. <i>Econometric Theory</i> 36, 1159–1166.
+K. Jochmans. <a href="publications/portmanteau/serial correlation.pdf">A portmanteau test for correlation in short panels</a>. <font color="310061">Econometric Theory</font> 36, 1159–1166.
 </p> 
 	
 <p> 
-K. Jochmans. <a href="publications/error components/cluster.pdf">Testing for correlation in error-component models</a>. <i>Journal of Applied Econometrics</i> 35, 860–878.
+K. Jochmans. <a href="publications/error components/cluster.pdf">Testing for correlation in error-component models</a>. <font color="310061">Journal of Applied Econometrics</font> 35, 860–878.
 </p> 
 	
 <p> 
-K. Jochmans and V. Verardi. <a href="publications/twgravity/twexp_twgravity - stata.pdf">twexp and twgravity: Fitting exponential regression models with two-way fixed effects</a>. <i>Stata Journal</i> 20, 468–480. 
+K. Jochmans and V. Verardi. <a href="publications/twgravity/twexp_twgravity - stata.pdf">twexp and twgravity: Fitting exponential regression models with two-way fixed effects</a>. <font color="310061">Stata Journal</font> 20, 468–480. 
 </p> 
 	
 <p> 
-K. Jochmans and V. Verardi. <a href="publications/xtserialpm/xtserialpm - stata.pdf">xtserialpm: A portmanteau test for serial correlation in a linear panel model</a>. <i>Stata Journal</i> 20, 149–161.
+K. Jochmans and V. Verardi. <a href="publications/xtserialpm/xtserialpm - stata.pdf">xtserialpm: A portmanteau test for serial correlation in a linear panel model</a>. <font color="310061">Stata Journal</font> 20, 149–161.
 </p> 
 	
 <p> 
-K. Jochmans and M. Weidner. <a href="publications/network regressions/graphs revision.pdf">Fixed-effect regressions on network data</a>. <i>Econometrica</i> 87, 1543–1560.
+K. Jochmans and M. Weidner. <a href="publications/network regressions/graphs revision.pdf">Fixed-effect regressions on network data</a>. <font color="310061">Econometrica</font> 87, 1543–1560.
 </p> 
 	
 <p> 
-K. Jochmans and T. Otsu. <a href="publications/two-way likelihood corrections/likelihoodcorrection.pdf">Likelihood corrections for two-way models</a>. <i>Annals of Economics and Statistics</i> 134, 227–242.
+K. Jochmans and T. Otsu. <a href="publications/two-way likelihood corrections/likelihoodcorrection.pdf">Likelihood corrections for two-way models</a>. <font color="310061">Annals of Economics and Statistics</font> 134, 227–242.
 </p> 
 
 <p> 
-K. Jochmans. <a href="publications/dyadic/SERIEs.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <i>SERIEs - Journal of the Spanish Economic Association</i> 14, 417-433.
+K. Jochmans. <a href="publications/dyadic/SERIEs.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <font color="310061">SERIEs - Journal of the Spanish Economic Association</font> 14, 417-433.
 </p> 
 	
 <p> 
-K. Jochmans. <a href="publications/network formation/logit 2nd revision.pdf">Semiparametric analysis of network formation</a>. <i>Journal of Business & Economic Statistics</i> 36, 705–713.
+K. Jochmans. <a href="publications/network formation/logit 2nd revision.pdf">Semiparametric analysis of network formation</a>. <font color="310061">Journal of Business & Economic Statistics</font> 36, 705–713.
 </p> 
 	
 <p> 
-S. Bonhomme, K. Jochmans, and J.-M. Robin. <a href="publications/nonexchangeable mixtures/JOE_update.pdf">Nonparametric estimation of non-exchangeable latent-variable models</a>. <i>Journal of Econometrics</i> 201, 237–248.
+S. Bonhomme, K. Jochmans, and J.-M. Robin. <a href="publications/nonexchangeable mixtures/JOE_update.pdf">Nonparametric estimation of non-exchangeable latent-variable models</a>. <font color="310061">Journal of Econometrics</font> 201, 237–248.
 </p> 
 	
 <p> 
-K. Jochmans and T. Magnac. <a href="publications/sufficiency/sufficiency revision.pdf">A note on sufficiency in binary panel models</a>. <i>Econometrics Journal</i> 20, 259–269.
+K. Jochmans and T. Magnac. <a href="publications/sufficiency/sufficiency revision.pdf">A note on sufficiency in binary panel models</a>. <font color="310061">Econometrics Journal</font> 20, 259–269.
 </p> 
 
 
-<b> Stata modules </b>
+<b><u> Stata modules </u></b>
 (co-written with Vincenzo Verardi.)
 
 <br><br>
@@ -194,7 +194,7 @@ Estimation of two-way models:
 
 
 
-<b> Events </b>
+<b><u> Events </u></b>
 
 <br> 
 <p align="justify", style="text-left:40px"> Conference on <a href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometric Methods for Modern Data Structures</small></a>, July 7-8, 2022. The program is <a href="https://www.tse-fr.eu/sites/default/files/TSE/documents/conf/2022/program_econometric_2022.pdf">here</small></a>.
