--- a/publications.html
+++ b/publications.html
@@ -44,151 +44,151 @@
 
 <p>
 
-<a href="publications/markov/ET revision.pdf">Learning Markov processes with latent variables</a>.  <i>Econometric Theory</i>, forthcoming. (with Ayden Higgins)
+<a href="publications/markov/ET revision.pdf">Learning Markov processes with latent variables</a>.  <font color="310061">Econometric Theory</font>, forthcoming. (with Ayden Higgins)
 
 
 <br><br>
-<a href="publications/blockmodel/blockmodel revision.pdf">Nonparametric identification and estimation of stochastic block models from many small networks</a>. <i>Journal of Econometrics</i> 242, 105805.
+<a href="publications/blockmodel/blockmodel revision.pdf">Nonparametric identification and estimation of stochastic block models from many small networks</a>. <font color="310061">Journal of Econometrics</font> 242, 105805.
 
 <br><br>	
-<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <i>Econometrica</i> 92, 411-427. (with Ayden Higgins)	
+<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <font color="310061">Econometrica</font> 92, 411-427. (with Ayden Higgins)	
 [<a href="publications/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>, <a href="publications/panel bootstrap/panel_bstrap_examples.pdf">examples</a>, <a href="publications/panel bootstrap/replication_package.zip">replication files</a>]
 
 <br><br>
-<a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i> 40, 61-97. (with Martin Weidner)
+<a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <font color="310061">Econometric Theory</font> 40, 61-97. (with Martin Weidner)
 
 <br><br>
-<a href="publications/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <i>SERIEs - Journal of the Spanish Economic Association</i> 14, 417-433. Special issue in honor of Manuel Arellano
+<a href="publications/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <font color="310061">SERIEs - Journal of the Spanish Economic Association</font> 14, 417-433. Special issue in honor of Manuel Arellano
 
 <br><br>	
-<a href="publications/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i> 237, 105462. (with Ayden Higgins)
+<a href="publications/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <font color="310061">Journal of Econometrics</font> 237, 105462. (with Ayden Higgins)
 
 <br><br>	
-<a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i> 235,1203-1214. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
+<a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <font color="310061">Journal of Econometrics</font> 235,1203-1214. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
 
 <br><br>
-<a href="publications/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <i>Journal of Applied Econometrics</i> 38, 321-333.
+<a href="publications/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <font color="310061">Journal of Applied Econometrics</font> 38, 321-333.
 [<a href="publications/rassign/exclusionbias appendix.pdf">supplement</a>,
 <a href="publications/rassign/rassign.zip">Stata implementation and replication files</a>]
 			
 <br><br>	
-<a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i> 37, 1121–1137. (with Vincenzo Verardi)
+<a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <font color="310061">Journal of Applied Econometrics</font> 37, 1121–1137. (with Vincenzo Verardi)
 [<a href="publications/ivgravity/Stata ivgravity.zip">Stata implementation</a>]	
 
 <br><br>
 <a href="publications/many regressors/many regressors.pdf">Heteroskedasticity-robust inference in linear regression models with many covariates</a>.
-<i>Journal of the American Statistical Association</i> 117, 887–896.
+<font color="310061">Journal of the American Statistical Association</font> 117, 887–896.
 
 [<a href="publications/many regressors/many regressors supplement.pdf">supplement</a>,
 <a href="publications/many regressors/many regressors [replication].zip">replication files</a>]
 
 <br><br>
 <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental-variable estimators of fixed-effect models for count data</a>.
-<i>Economics Letters</i> 212, 110318.
+<font color="310061">Economics Letters</font> 212, 110318.
 
 <br><br>
 <a href="publications/portmanteau/serial correlation.pdf">A portmanteau test for correlation in short panels</a>.
-<i>Econometric Theory</i> 36, 1159–1166.
+<font color="310061">Econometric Theory</font> 36, 1159–1166.
 
 <br><br>
 <a href="publications/error components/cluster.pdf">Testing for correlation in error-component models</a>.
-<i>Journal of Applied Econometrics</i> 35, 860–878.
+<font color="310061">Journal of Applied Econometrics</font> 35, 860–878.
 
 [<a href="publications/error components/replication material JAE.zip">replication files</a>, <a href="https://econpapers.repec.org/software/bocbocode/s458642.htm">Stata implementation</a>]
 
 <br><br>
 <a href="publications/twgravity/twexp_twgravity - stata.pdf">twexp and twgravity: Fitting exponential regression models with two-way fixed effects</a>.
-<i>Stata Journal</i> 20, 468–480. (with Vincenzo Verardi)
+<font color="310061">Stata Journal</font> 20, 468–480. (with Vincenzo Verardi)
 
 [<a href="publications/twgravity/twexp_twgravity [Stata 10_19].zip">Stata modules</a>]
 
 <br><br>
 <a href="publications/xtserialpm/xtserialpm - stata.pdf">xtserialpm: A portmanteau test for serial correlation in a linear panel model</a>.
-<i>Stata Journal</i> 20, 149–161. (with Vincenzo Verardi)
+<font color="310061">Stata Journal</font> 20, 149–161. (with Vincenzo Verardi)
 
 [<a href="publications/xtserialpm/xtserialpm.zip">Stata modules</a>]
 
 <br><br>
 <a href="publications/network regressions/graphs revision.pdf">Fixed-effect regressions on network data</a>.
-<i>Econometrica</i> 87, 1543–1560. (with Martin Weidner)
+<font color="310061">Econometrica</font> 87, 1543–1560. (with Martin Weidner)
 
 [<a href="publications/network regressions/graphs supplement.pdf">supplement</a>]
 
 <br><br>
 <a href="publications/two-way likelihood corrections/likelihoodcorrection.pdf">Likelihood corrections for two-way models</a>.
-<i>Annals of Economics and Statistics</i> 134, 227–242. Special issue on panel data (with Taisuke Otsu)
+<font color="310061">Annals of Economics and Statistics</font> 134, 227–242. Special issue on panel data (with Taisuke Otsu)
 
 <br><br>
 <a href="publications/network formation/logit 2nd revision.pdf">Semiparametric analysis of network formation</a>.
-<i>Journal of Business & Economic Statistics</i> 36, 705–713.
+<font color="310061">Journal of Business & Economic Statistics</font> 36, 705–713.
 
 [<a href="publications/network formation/Replication JBES.zip">replication files</a>]
 
 <br><br>
 <a href="publications/nonexchangeable mixtures/JOE_update.pdf">Nonparametric estimation of non-exchangeable latent-variable models</a>.
-<i>Journal of Econometrics</i> 201, 237–248. (with Stéphane Bonhomme and Jean-Marc Robin)
+<font color="310061">Journal of Econometrics</font> 201, 237–248. (with Stéphane Bonhomme and Jean-Marc Robin)
 
 <br><br>
 <a href="publications/sufficiency/sufficiency revision.pdf">A note on sufficiency in binary panel models</a>.
-<i>Econometrics Journal</i> 20, 259–269. (with Thierry Magnac)
+<font color="310061">Econometrics Journal</font> 20, 259–269. (with Thierry Magnac)
 
 <br><br>
 <a href="publications/gravity/gravity.pdf">Two-way models for gravity</a>.
-<i>Review of Economics and Statistics</i> 99, 478–485.
+<font color="310061">Review of Economics and Statistics</font> 99, 478–485.
 
 [<a href="publications/gravity/gravity supplement.pdf">supplement</a>, <a href="publications/gravity/twexp_twgravity [Matlab 10_19].zip">Matlab implementation</a>, <a href="publications/gravity/twexp_twgravity [Stata 10_19].zip">Stata implementation</a>]
 
 <br><br>
 <a href="publications/tail restrictions/ET3408-3.pdf">Inference on two-component mixtures under tail restrictions</a>.
-<i>Econometric Theory</i> 33, 610–635. (with Marc Henry and Bernard Salanié)
+<font color="310061">Econometric Theory</font> 33, 610–635. (with Marc Henry and Bernard Salanié)
 
 [<a href="publications/tail restrictions/Monte Carlo - Tails.zip">replication files</a>, <a href="publications/tail restrictions/ET3408-2.pdf">older version with additional simulation results</a>]
 
 <br><br>
 <a href="publications/adjusted likelihood/ET MS3305 revision 2.pdf">Likelihood inference in an autoregression with fixed effects</a>.
-<i>Econometric Theory</i> 32, 1178–1215. (with Geert Dhaene)
+<font color="310061">Econometric Theory</font> 32, 1178–1215. (with Geert Dhaene)
 
 [<a href="publications/adjusted likelihood/ET MS3305 revision 2 supplement.pdf">supplement</a>, <a href="publications/adjusted likelihood/mal_replication.zip">replication files</a>]
 
 <br><br>
 <a href="publications/panelvar/panelVAR 4.pdf">Bias-corrected estimation of panel vector autoregressions</a>.
-<i>Economics Letters</i> 145, 98–103. (with Geert Dhaene)
+<font color="310061">Economics Letters</font> 145, 98–103. (with Geert Dhaene)
 
 <br><br>
 <a href="publications/latent structures/jade.pdf">Estimating multivariate latent-structure models</a>.
-<i>Annals of Statistics</i> 44, 540–563. (with Stéphane Bonhomme and Jean-Marc Robin)
+<font color="310061">Annals of Statistics</font> 44, 540–563. (with Stéphane Bonhomme and Jean-Marc Robin)
 
 [<a href="publications/latent structures/jade supplement.pdf">supplement</a>, <a href="publications/latent structures/latent - sims.zip">replication files</a>]
 
 <br><br>
 <a href="publications/melanges/JRSSB manuscript.pdf">Nonparametric estimation of finite mixtures from repeated measurements</a>.
-<i>Journal of the Royal Statistical Society - Series B</i> 78, 211–229. (with Stéphane Bonhomme and Jean-Marc Robin)
+<font color="310061">Journal of the Royal Statistical Society - Series B</font> 78, 211–229. (with Stéphane Bonhomme and Jean-Marc Robin)
 
 [<a href="publications/melanges/JRSSB supp material.pdf">supplement</a>, <a href="publications/melanges/JRSSB Replication Material.zip">replication files</a>]
 
 <br><br>
 <a href="publications/spj/spj.pdf">Split-panel jackknife estimation of fixed-effect models</a>.
-<i>Review of Economic Studies</i> 82, 991–1030. (with Geert Dhaene)
+<font color="310061">Review of Economic Studies</font> 82, 991–1030. (with Geert Dhaene)
 
 [<a href="publications/spj/Webappendix.pdf">supplement</a>, <a href="publications/spj/Replication Material.zip">replication files</a>, <a href="https://ideas.repec.org/c/boc/bocode/s458651.html">Stata implementation</a>]
 
 <br><br>
 <a href="publications/sample selection/multiplicative3.pdf">Multiplicative-error models with sample selection</a>.
-<i>Journal of Econometrics</i> 184, 315–327.
+<font color="310061">Journal of Econometrics</font> 184, 315–327.
 
 [<a href="publications/sample selection/Counts -sims.zip">replication files</a>]
 
 <br><br>
 <a href="publications/incidental functions/n_functions.pdf">First-differencing in panel data models with incidental functions</a>.
-<i>Econometrics Journal</i> 17, 373–382.
+<font color="310061">Econometrics Journal</font> 17, 373–382.
 
 <br><br>
 <a href="publications/pairwise comparisons/pairwise-comparison.pdf">Pairwise-comparison estimation with nonparametric controls</a>.
-<i>Econometrics Journal</i> 16, 340–372. Denis Sargan Econometrics Prize winner 2013.
+<font color="310061">Econometrics Journal</font> 16, 340–372. Denis Sargan Econometrics Prize winner 2013.
 
 <br><br>
 <a href="publications/transformation model/Influence9.pdf">The variance of a rank estimator of transformation models</a>.
-<i>Economics Letters</i> 117, 168–169.
+<font color="310061">Economics Letters</font> 117, 168–169.
 
 
 </p>
