--- a/preprints.html
+++ b/preprints.html
@@ -44,13 +44,13 @@
 
 <p>
 
-<a href="preprints/workerfirm/workerfirm.pdf">Identification in models for matched worker-firm data with two-sided random effects</a>.
+<a href="preprints/workerfirm/workerfirm.pdf">Identification in models for matched panel data with two-sided random effects</a>.
 
 <br><br>
 <a href="preprints/MBB/MBB.pdf">Inference in dynamic models for panel data using the moving block bootstrap</a>. (with Ayden Higgins)
 
 <br><br>
-<a href="preprints/neyman/neyman.pdf">A Neyman-orthogonalization approach to the incidental-parameter problem</a>. Under revision for <i>Econometrica</i>. (with Stéphane Bonhomme and Martin Weidner)
+<a href="preprints/neyman/neyman.pdf">A Neyman-orthogonalization approach to the incidental-parameter problem</a>. Under revision for <font color="310061">Econometrica</font>. (with Stéphane Bonhomme and Martin Weidner)
 
 
 <br><br>	
