--- a/erc.html
+++ b/erc.html
@@ -98,7 +98,7 @@ A. Higgins and K. Jochmans.
 </p> 
 
 <p> 
-K. Jochmans
+K. Jochmans.
 <a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <font color="310061">Journal of Econometrics</font> 235, 1203-1214.
 </p>
 
