--- a/erc2.html
+++ b/erc2.html
@@ -57,8 +57,6 @@ ERC Consolidator Grant 101044319 (2023--2027)
 
 
 <p align="justify", style="text-left:40px"> 
-
-
 The overarching goal of  this project is to develop a coherent set  of econometric methods to
 deal with  unobserved heterogeneity in  the analysis  of social interactions  between agents.
 Such heterogeneity  is well  recognized to  be important. It  is often  of great  interest to
@@ -81,9 +79,50 @@ considered,  thereby  covering  team  production,  competition,  and  peer  effe
 attention  will  be  given  to  recovering  treatment  effects  in  the  presence  of  social
 interactions,  where interference  on unobservable  confounders is  an issue.  For situations
 where data limitations prevent a  fully nonparametric approach, instrumental-variable methods
-that  build on  flexible  functional form  restrictions will  be  developed. 
+that  build on  flexible  functional form  restrictions will  be  developed. </p>
 
 
+
+
+
+
+<b><u> Research output </u></b>
+
+
+<p> 
+K. Jochmans.
+<a href="preprints/workerfirm/workerfirm.pdf">Identification in models for matched panel data with two-sided random effects</a>. Preprint, 2025.
+</p> 
+
+<p> 
+A. Higgins and K. Jochmans.
+<a href="preprints/MBB/MBB.pdf">Inference in dynamic models for panel data using the moving block bootstrap</a>. Preprint, 2025.
+</p>
+
+<p>
+S. Bonhomme, K. Jochmans, and M. Weidner.
+<a href="preprints/neyman/neyman.pdf">A Neyman-orthogonalization approach to the incidental-parameter problem</a>. Preprint, 2025.
+</p>
+
+<p>
+K. Jochmans and P. Diegert.
+<a href="preprints/twowaymodel/twowaymodel.pdf">Nonparametric identification of models for dyadic data</a>. Preprint, 2024.
+</p>
+
+<p>
+K. Jochmans.
+<a href="preprints/Judges/judges.pdf">Many (weak) judges in judge-leniency designs</a>. Preprint, 2023.
+</p> 
+
+<p> 
+K. Jochmans. 
+<a href="publications/blockmodel/blockmodel revision.pdf">Nonparametric identification and estimation of stochastic block models from many small networks</a>. <font color="310061">Journal of Econometrics</font> 242, 105805.
+</p> 
+
+<p> 
+A. Higgins and K. Jochmans.
+<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <font color="310061">Econometrica</font> 92, 411-427.
+</p> 
 
 
 
