--- a/classes.html
+++ b/classes.html
@@ -48,6 +48,8 @@ Advanced Econometric Methods, MRes in Economics, University of Cambridge
 <br>
 <a href="class notes/R300/slides.pdf">Lecture slides</a>
 
+
+<!-- homeworks have been commented out
 <br>
 <a href="class notes/R300/PS1 Questions.pdf">Problem set 1</a> 
 [<a href="class notes/R300/PS1 Solutions.pdf">Solution</a>]
@@ -69,6 +71,7 @@ Advanced Econometric Methods, MRes in Economics, University of Cambridge
 <br>
 <a href="class notes/R300/PS7 Questions.pdf">Problem set 7</a> 
 [<a href="class notes/R300/PS7 Solutions.pdf">Solution</a>]
+-->
 
 
 <br><br>
