--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@ Email: koen [dot] jochmans [at] tse-fr [dot] eu
 -->
 
 
-<br>
 Professor of Economics at <a href="https://www.tse-fr.eu">Toulouse School of Economics</small></a>
 <br> 
 Associate Editor for <a href="https://www.tandfonline.com/journals/lecr20">Econometric Reviews</small></a>
+<br>
+Associate Editor for <a href="https://www.tandfonline.com/journals/lecr20">Econometric Theory</small></a>
 <br>
 Associate Editor for  <a href="https://academic.oup.com/ectj?login=false">Econometrics Journal</small></a>
 <br>
