--- a/preprints.html
+++ b/preprints.html
@@ -44,6 +44,9 @@
 
 <p>
 
+<a href="preprints/networkbootstrap/networkbstrap.pdf">Two-way clustering with non-exchangeable data</a>.
+
+<br><br>
 <a href="preprints/workerfirm/workerfirm.pdf">Identification in models for matched panel data with two-sided random effects</a>.
 
 <br><br>
