--- a/erc2.html
+++ b/erc2.html
@@ -91,6 +91,11 @@ that  build on  flexible  functional form  restrictions will  be  developed. </p
 
 <p> 
 K. Jochmans.
+<a href="preprints/networkbootstrap/networkbstrap.pdf">Two-way clustering with non-exchangeable data</a>. Preprint, 2026.
+</p> 
+
+<p> 
+K. Jochmans.
 <a href="preprints/workerfirm/workerfirm.pdf">Identification in models for matched panel data with two-sided random effects</a>. Preprint, 2025.
 </p> 
 
