--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Professor of Economics at <a href="https://www.tse-fr.eu">Toulouse School of Eco
 <br> 
 Associate Editor for <a href="https://www.tandfonline.com/journals/lecr20">Econometric Reviews</small></a>
 <br>
-Associate Editor for <a href="https://www.tandfonline.com/journals/lecr20">Econometric Theory</small></a>
+Associate Editor for <a href="https://www.cambridge.org/core/journals/econometric-theory">Econometric Theory</small></a>
 <br>
 Associate Editor for  <a href="https://academic.oup.com/ectj?login=false">Econometrics Journal</small></a>
 <br>
