feb notes update

--- a/classes.html
+++ b/classes.html
@@ -85,8 +85,40 @@ Difference and differential equations, MRes Prep Class, University of Cambridge
 Intermediate Econometrics, M1, TSE
 
 <br>
-The course material is made available via Moodle. 
+The course material is made available via Moodle. The following is the material from 2025-26.
 
+<br>
+Regression [<a href="class notes/M1/Notes/notes1.pdf">notes</a>, <a href="class notes/M1/Slides/slides1.pdf">slides</a>, movies: <a href="class notes/M1/Slides/testscores.mp4">regression</a>, <a href="class notes/M1/Slides/partitionedregression1.mp4">partitioned regression</a>]
+
+<br>
+Sampling [<a href="class notes/M1/Notes/notes2.pdf">notes</a>, <a href="class notes/M1/Slides/slides2.pdf">slides</a>, movies: <a href="class notes/M1/Slides/scatter.mp4">regression fits</a>, <a href="class notes/M1/Slides/cibands.mp4">quantifying randomness</a>]
+
+<br>
+Asymptotics [<a href="class notes/M1/Notes/notes2b.pdf">notes</a>, <a href="class notes/M1/Slides/slides3.pdf">slides</a>, movies: <a href="class notes/M1/Slides/asymptotics.mp4">asymptotics</a>]
+
+<br>
+Inference in classical linear regression model [<a href="class notes/M1/Notes/notes3.pdf">notes</a>, <a href="class notes/M1/Slides/slides4.pdf">slides</a>, movies: <a href="class notes/M1/Slides/power.mp4">power</a>]
+
+<br>
+Large-sample inference [<a href="class notes/M1/Notes/notes3.pdf">notes</a>, <a href="class notes/M1/Slides/slides5.pdf">slides</a>]
+
+<br>
+Causality [<a href="class notes/M1/Notes/notes4.pdf">notes</a>, <a href="class notes/M1/Slides/slides6.pdf">slides</a>]
+
+<br>
+Simultaneity [<a href="class notes/M1/Notes/notes5.pdf">notes</a>, <a href="class notes/M1/Slides/slides7.pdf">slides</a>]
+
+<br>
+Instrumental variables [<a href="class notes/M1/Notes/notes5.pdf">notes</a>, <a href="class notes/M1/Slides/slides8.pdf">slides</a>]
+
+<br>
+Examples of nonlinear models [<a href="class notes/M1/Notes/notes6.pdf">notes</a>, <a href="class notes/M1/Slides/slides9.pdf">slides</a>]
+
+<br>
+Maximum likelihood [<a href="class notes/M1/Notes/notes7.pdf">notes</a>, <a href="class notes/M1/Slides/slides10.pdf">slides</a>]
+
+<br>
+Generalized method of moments [<a href="class notes/M1/Notes/notes8.pdf">notes</a>, <a href="class notes/M1/Slides/slides11.pdf">slides</a>]
 
 
 <br><br>
